arch/renesas, configs/rx65n:  Add support for the Renesas RX65N.

--- a/arch/renesas/Kconfig
+++ b/arch/renesas/Kconfig
@@ -22,9 +22,19 @@ config ARCH_CHIP_M30262F8
 	---help---
 		Renesas M30262F8 (M16C)
 
+config ARCH_CHIP_R5F565NEDDFC
+	bool "R5F565NEDDFC"
+	select ARCH_RX65N
+	---help---
+		Renesas RX65N
+
 endchoice
 
 config ARCH_SH1
+	bool
+	default n
+
+config ARCH_RX65N
 	bool
 	default n
 
@@ -36,9 +46,11 @@ config ARCH_CHIP
 	string
 	default "sh1"		if ARCH_SH1
 	default "m16c"		if ARCH_M16C
+	default "rx65n"		if ARCH_RX65N
 
 source arch/renesas/src/common/Kconfig
 source arch/renesas/src/m16c/Kconfig
 source arch/renesas/src/sh1/Kconfig
+source arch/renesas/src/rx65n/Kconfig
 
 endif # ARCH_RENESAS
